Clean up less files add new variables

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
 
-      <div id="wrapper">
+      <div id="wrapper" class="flipWrap">
         <header class="nav-buttons">
             <nav class="control-btns">
               <button class="close" data-close></button>
