Clean up grunt file. Add data values to html file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <button id="flipper" class="flip" data-flip></button>
             </nav>
           </header>
-        <div id="calculatorFlipper" class="flipthis">
+        <div id="calculator-flipper" class="flipthis">
           <main id="calculator" class="front">
             <section class="screen">
               <span class="display-text" data-result>0</span>
@@ -49,25 +49,25 @@
                 <button class="operator top-row btn-col right" data-operator="divide">&divide;</button>
               </div>
               <div class="row">
-                <button class="number col" data-number>1</button>
-                <button class="number col" data-number>2</button>
-                <button class="number col" data-number>3</button>
+                <button class="number col" data-number="1">1</button>
+                <button class="number col" data-number="2">2</button>
+                <button class="number col" data-number="3">3</button>
                 <button class="operator col right" data-operator="multiply">&times;</button>
               </div>
               <div class="row">
-                <button class="number col" data-number>4</button>
-                <button class="number col" data-number>5</button>
-                <button class="number col" data-number>6</button>
+                <button class="number col" data-number="4">4</button>
+                <button class="number col" data-number="5">5</button>
+                <button class="number col" data-number="6">6</button>
                 <button class="operator col right" data-operator="minus">&minus;</button>
               </div>
               <div class="row">
-                <button class="number col" data-number>7</button>
-                <button class="number col" data-number>8</button>
-                <button class="number col" data-number>9</button>
+                <button class="number col" data-number="7">7</button>
+                <button class="number col" data-number="8">8</button>
+                <button class="number col" data-number="9">9</button>
                 <button class="operator col right" data-operator="plus">&plus;</button>
               </div>
               <div class="row">
-                <button class="number col colspan-two btm-left-radius" data-number>0</button>
+                <button class="number col colspan-two btm-left-radius" data-number="0">0</button>
                 <button class="number dot col" data.dot>.</button>
                 <button class="operator col right btm-right-radius" data-operator="equals">&equals;</button>
               </div>
