Added outstanding keyboard event handling, update styles and chage percentage data type

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </g>
                   </svg>
                 </button>
-                <button class="operator top-row btn-col" data-operator="percentage">&percnt;</button>
+                <button class="operator top-row btn-col" data-percentage>&percnt;</button>
                 <button class="operator top-row btn-col right" data-operator="divide">&divide;</button>
               </div>
               <div class="row">
