Added transitions and animatoin effects to nav buttons and button focus

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="wrapper" class="flipWrap">
         
         <header class="nav-buttons">
-          <nav class="control-btns">
+          <nav id="nav-buttons" class="control-btns flip-out">
             <button class="close" data-close></button>
             <button class="minimize" data-minimize></button>
             <button id="flipper" class="flip" data-flip></button>
